Fix footer and logo on mobile

--- a/public/stylesheets/add_recipe.css
+++ b/public/stylesheets/add_recipe.css
@@ -5,15 +5,15 @@
 body {
     overflow-x: hidden;
     height: 100%;
-    background: url('https://images.pexels.com/photos/347139/pexels-photo-347139.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500') no-repeat center center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+    background: url('https://images.pexels.com/photos/347139/pexels-photo-347139.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500') no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 
 #username {
-    text-transform: capitalize; 
+    text-transform: capitalize;
     position: absolute;
     top: 12px;
     left: 840px;
@@ -46,7 +46,7 @@ body {
     position: relative;
     left: 1100px;
     top: -4px;
-     font-size: 1em;
+    font-size: 1em;
     padding-bottom: 0;
     border-bottom: 2.5px solid #fff;
 }
@@ -81,7 +81,7 @@ body {
     border: 2px solid #333;
     padding: 4em 3em;
     background: aliceblue;
-} 
+}
 
 .cards form {
     position: relative;
@@ -95,7 +95,10 @@ body {
     margin-bottom: 6em;
 }
 
-.btn-primary /*button */ {
+.btn-primary
+
+/*button */
+    {
     margin-top: 1em;
     width: 35%;
 }
@@ -131,4 +134,14 @@ body {
 .footer-copyright a {
     text-decoration: none;
     color: aquamarine;
+}
+
+@media screen and (min-width: 300px) and (max-width: 780px) {
+    .title {
+        position: absolute;
+        top: 79px;
+        height: 40px;
+        opacity: 1;
+        left: 15px;
+    }
 }
