--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -174,7 +174,7 @@ ul li {
 
     .nav-item .signup {
         position: relative;
-        top: 160px;
+        top: 50px;
         color: orange !important;
         border-bottom: 2.5px solid #fff;
         font-size: 2.4em;
