--- a/public/stylesheets/signup.css
+++ b/public/stylesheets/signup.css
@@ -160,7 +160,7 @@ body {
 
     .nav-item .signin {
         position: relative;
-        top: 160px;
+        top: 50px;
         font-size: 2.4em;
         left: 25%;
         text-align: center;
